--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header class="container">
         <div class="row">
-            <h1 class="col-sm-8">Amanda Services</h1>
+            <h1 class="col-sm-8"><a href="">Amanda Services</a></h1>
             <nav class="col-sm-4">
-                <p>Insights</p>
-                <p>About</p>
-                <p>Contact</p>
+                <p><a href="">Insights</a></p>
+                <p><a href="">About</a></p>
+                <p><a href="">Contact</a></p>
             </nav>
         </div>
     </header>
